fix: fix letter-spacing

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -100,6 +100,7 @@ $highlight-opacity: #76F4EA80;
     background-color: transparent;
     border: 1px solid black;
     transition: all 0.2s ease-in;
+    letter-spacing: 4px;
     &:hover{
       transition: all 0.2s ease-in;
       cursor: pointer;
